# CorporateChat

./: .gitignore
.github/workflows/: build.yml  build.yml.txt  main.yml  test.yml
ClientChat/: CMakeLists.txt  chatwidget.cpp  chatwidget.h  chatwidget.ui  chatwindow.h  client.cpp  client.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  message.h
ServerChat/: CMakeLists.txt  chat.db  clienthandler.cpp  clienthandler.h  database.cpp  database.h  main.cpp  server.cpp  server.h
tests/: CMakeLists.txt  CMakeLists.txt.txt  test_auth.cpp  test_message.cpp  test_message.cpp.cpp  test_network.cpp
